# fastapi-boilerplate

./: .gitignore  README.md  main.py  pyproject.toml
alembic/versions/: 2025_01_31_0943-7f4e8bd3822c_create_user_tabel.py  2025_01_31_1056-e8bcbe6fb338_add_column_status.py  2025_02_27_1119-1b811717145c_alter_non_nullable_column_and_set_.py
src/: version.py
src/api/: common_endpoints.py  healthcheck.py  user.py  version.py
src/core/: config.py
src/dao/: db.py  users.py
src/dao/models/: user.py
src/dto/: user.py  version.py
src/exceptions/: user.py
src/service/: converter.py  user_service.py
src/utils/: constants.py  utils.py
